--- a/index.html
+++ b/index.html
@@ -113,14 +113,13 @@
                     &ltABOUT/&gt
                 </h1>
                 <p class="text-[#e5e4e2] lg:text-lg xl:text-xl" data-aos="fade-in" data-aos-duration="1000">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit ipsam
-                    beatae debitis recusandae dolorum mollitia temporibus veritatis
-                    sapiente harum porro nemo, aliquam modi delectus facilis inventore
-                    adipisci molestias optio maiores distinctio suscipit maxime.
-                    Laboriosam nam accusantium natus excepturi autem, dolores neque
-                    quisquam fugiat. Enim ea officiis, pariatur et nostrum tempora
-                    tempore repellat aliquid ad a soluta ullam quasi in quam saepe ex
-                    repudiandae maxime ipsa deleniti iste voluptate odit quidem.
+                    I’m Ansh Narang from Panipat, Haryana, recently graduated with a Bachelor of Computer Applications
+                    (CTIS) from Panipat Institute of Engineering and Technology, Panipat. With a strong passion for web
+                    development, I enjoy creating responsive, user-friendly, and visually appealing websites. My skill
+                    set includes HTML, CSS, JavaScript, Python, Tailwind CSS, and React.js, which I use to build modern
+                    and efficient web solutions. I am currently seeking opportunities in frontend development where I
+                    can apply my knowledge, learn from real-world projects, and grow as a developer. My long-term goal
+                    is to advance in the web development field and contribute to impactful digital innovations.
                 </p>
             </div>
         </div>
@@ -285,7 +284,10 @@
                             ensuring a smooth shopping experience. This project highlights my skills in building dynamic
                             UIs with React components, Tailwind styling, and implementing category-based filtering
                             logic.</div>
-                            <div><button class="bg-[#38bdf8] hover:bg-sky-500 p-2 text-white font-semibold px-3 rounded-md mt-2"><a href="https://gadget-hub-ansh77.vercel.app/" target="_blank">Live Demo ⇗</a></button></div>
+                        <div><button
+                                class="bg-[#38bdf8] hover:bg-sky-500 p-2 text-white font-semibold px-3 rounded-md mt-2"><a
+                                    href="https://gadget-hub-ansh77.vercel.app/" target="_blank">Live Demo
+                                    ⇗</a></button></div>
                     </div>
 
                     <div class="h-[70vh]  relative flex items-end rounded-lg overflow-hidden mt-10">
@@ -297,12 +299,16 @@
                     </div>
                     <div class="mt-2 p-2">
                         <div class="text-lg font-serif underline text-white">About Anand Lab</div>
-                        <div class="mt-2 text-white">A diagnostic laboratory web platform created with the MERN stack and
+                        <div class="mt-2 text-white">A diagnostic laboratory web platform created with the MERN stack
+                            and
                             Tailwind CSS in collaboration with a team. My key contribution was designing and developing
                             the frontend for the "About" and "Services" pages, ensuring a clean, responsive, and
                             user-friendly interface. The pages feature structured layouts, optimized visuals, and smooth
                             styling to maintain brand consistency and enhance user experience.</div>
-                            <div><button class="bg-[#38bdf8] hover:bg-sky-500 p-2 text-white font-semibold px-3 rounded-md mt-2"><a href="https://diagnostic-lab-eight.vercel.app/" target="_blank">Live Demo ⇗</a></button></div>
+                        <div><button
+                                class="bg-[#38bdf8] hover:bg-sky-500 p-2 text-white font-semibold px-3 rounded-md mt-2"><a
+                                    href="https://diagnostic-lab-eight.vercel.app/" target="_blank">Live Demo
+                                    ⇗</a></button></div>
                     </div>
 
 
