--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <!-- Main section -->
     <section
-        class="pt-[32vh] p-5 w-screen h-[100vh] bg-[url(/images/bgimg.jpg)] bg-contain bg-repeat sm:bg-cover sm:bg-no-repeat sm:bg-center sm:bg-fixed"
+        class="pt-[32vh] p-5 w-screen h-[100vh] bg-[url(/images/bgimg.jpg)] bg-cover bg-repeat sm:bg-cover sm:bg-no-repeat sm:bg-center sm:bg-fixed"
         id="intro">
         <div class="text-2xl text-[#38bdf8] sm:text-3xl">&ltHello World/&gt</div>
         <div class="text-[#e5e4e2] text-4xl sm:text-5xl mt-3 md:text-6xl" data-aos="fade-down" data-aos-duration="1000">
