--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 
     <!-- MOBILE NAV -->
-    <div class="bg-[#e5e4e2] bg-[url(/images/bg2.jpg)]  w-[100vw] h-[100vh] hidden fixed top-0 left-0 z-50 " id="nav">
+    <div class="bg-[#e5e4e2] bg-[url(/images/bg2.jpg)] bg-cover bg-center w-[100vw] h-[100vh] hidden fixed top-0 left-0 z-50 " id="nav">
 
         <div
             class="p-5 text-lg font-semibold h-[10vh] text- bg-[#0f172a] border-b-2 border-[#38bdf8] text-[#e5e4e2] flex justify-between items-center">
