--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <a href="#contact">Contact Me!</a>
             </button>
             <button class="ml-2 p-2 sm:p-3 bg-[#38bdf8] hover:bg-sky-500 mt-5 text-white px-5 font-semibold sm:text-lg">
-                <a href="#contact">Download CV</a>
+                <a href="/AnshNarang_Resume.pdf" download>Download CV</a>
             </button>
         </div>
     </section>
