linkedin link color chng

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                             <p class="font-semibold text-lg md:text-xl">Linked In</p>
                             <a target="_blank"
                                 href="https://www.linkedin.com/in/ansh-narang-172837318?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
-                                class="md:text-lg hover:text-blue-500">Ansh Narang</a>
+                                class="md:text-lg hover:text-blue-500 text-sky-500 underline underline-offset-2 decoaration-sky-500">Ansh Narang</a>
                         </div>
                     </div>
 
